_examples/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-httpd
  labels:
    app: apache-httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-httpd
  template:
    metadata:
      labels:
        app: apache-httpd
    spec:
      containers:
      - name: apache
        image: httpd:2.4-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: html-volume
        configMap:
          name: apache-html-config
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: apache-httpd
spec:
  selector:
    app: apache-httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
