_examples/forward_fqdn.yaml
apiVersion: gateway.apoxy.dev/v1
kind: GatewayClass
metadata:
  name: apoxy
spec:
  controllerName: gateway.apoxy.dev/gatewayclass-controller
---
apiVersion: gateway.apoxy.dev/v1
kind: Gateway
metadata:
  name: example-gw
spec:
  gatewayClassName: apoxy
  infrastructure:
    parametersRef:
      kind: Proxy
      name: example-proxy
  listeners:
    - protocol: HTTP
      port: 10000
      name: example-listener
---
apiVersion: gateway.apoxy.dev/v1
kind: HTTPRoute
metadata:
  name: default
spec:
  parentRefs:
    - kind: Gateway
      name: example-gw
      port: 10000
  hostnames:
    - '*'
  rules:
    - backendRefs:
        - kind: Backend
          name: debug-backend
          port: 443
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: next-debug-apoxy.vercel.app
