_examples/routing.yaml
apiVersion: gateway.apoxy.dev/v1
kind: GatewayClass
metadata:
  name: apoxy
spec:
  controllerName: gateway.apoxy.dev/gatewayclass-controller
---
apiVersion: gateway.apoxy.dev/v1
kind: Gateway
metadata:
  name: default
spec:
  gatewayClassName: apoxy
  infrastructure:
    parametersRef:
      kind: Proxy
      name: default
  listeners:
    - name: internal
      protocol: HTTP
      port: 80
---
apiVersion: gateway.apoxy.dev/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: default 
      kind: Gateway
      port: 80
  hostnames:
    - 'example.trainy.us'
  rules:
    - backendRefs:
        - kind: Backend
          name: example-backend
          port: 80
