_examples/tunnelnode.yaml
apiVersion: gateway.apoxy.dev/v1
kind: GatewayClass
metadata:
  name: apoxy
spec:
  controllerName: gateway.apoxy.dev/gatewayclass-controller
---
apiVersion: gateway.apoxy.dev/v1
kind: Gateway
metadata:
  name: example
spec:
  gatewayClassName: apoxy
  infrastructure:
    parametersRef:
      kind: Proxy
      name: example
  listeners:
    - protocol: HTTP
      port: 10000
      name: example
---
apiVersion: gateway.apoxy.dev/v1
kind: HTTPRoute
metadata:
  name: alpamayo
spec:
  parentRefs:
    - name: example
      port: 10000
      kind: Gateway
  hostnames:
    - '*'
  rules:
    - backendRefs:
        - kind: Backend
          name: example-tun
          port: 8080
